--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile "com.android.support:cardview-v7:25.3.1"
     compile "com.android.support:appcompat-v7:25.3.1"
     compile project(':openCVLibrary320')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 // The sample build uses multiple directories to
